<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ListView 
        android:id="@+id/msg_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#000" >
    </ListView>

    <LinearLayout 
        android:id="@+id/ll_bottom"  
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="fill_parent"  
        android:layout_height="40dp"
        android:orientation="horizontal"  
        android:background="#000000" >  
        <ImageView
            android:id="@+id/iv_record"
            android:contentDescription="@string/sound"
            android:layout_width="0dp" 
            android:layout_height="fill_parent"
			android:layout_weight="0.2"
            android:layout_marginLeft="5dip"
            android:src="@drawable/chatting_setmode_msg_btn" />
         
        <EditText 
            android:id="@+id/input_text"  
            android:layout_width="0dp" 
            android:layout_weight="1" 
            android:layout_height="fill_parent"  
            android:layout_marginLeft="3dp" 
            android:layout_marginRight="5dp"
            android:background="#FFFFFF"
            android:padding="1dp"
            android:hint=""
            android:singleLine="true"  
            android:textSize="18sp"/> 
		<Button  
            android:id="@+id/send"  
            android:layout_width="0dp"
            android:layout_weight="0.3"  
            android:layout_height="fill_parent"   
            android:layout_marginRight="10dp"  
            android:background="@drawable/chat_send_btn"  
            android:text="@string/send" />  
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ll_bottom2"
        android:visibility="gone"  
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="fill_parent"  
        android:layout_height="40dp"
        android:orientation="horizontal"  
        android:background="#000000" >  
        <ImageView
            android:id="@+id/iv_txt"
            android:contentDescription="@string/txt"
            android:layout_width="0dp"  
            android:layout_height="fill_parent"
			android:layout_weight="0.1"
            android:layout_marginLeft="5dip"
            android:src="@drawable/chatting_setmode_voice_btn" />
        <Button  
            android:id="@+id/btn_record"  
            android:layout_width="0dp"
            android:layout_weight="0.7"  
            android:layout_height="fill_parent"   
            android:layout_marginRight="10dp"
            android:background="@drawable/chat_send_btn"
            android:text="@string/record" />  
    </LinearLayout> 

</LinearLayout>
