<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background"
    android:windowActionBar="false">
    
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:textSize="30sp"
	    android:textColor="#9BEC4E"
	    android:text="@string/app_name"
	    />
	
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="30dp"
	    >
	    <Button 
	        android:id="@+id/btn_search"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="5dp"
	       	android:background="@drawable/chat_send_btn"
	        android:textColor="#000000"
	        android:textSize="12sp"
	        android:text="@string/search"/>

	    <Button 
	        android:id="@+id/btn_service" 
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="10dp"
	       	android:background="@drawable/chat_send_btn"
	        android:textColor="#000000"
	        android:textSize="12sp"
	        android:text="@string/services"/>
	     
	</LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30sp">
        
        <fragment
            android:id="@+id/f_devlist"
            android:name="org.demoncode.portal.activity.DevListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <fragment
            android:id="@+id/f_apconfig"
            android:name="org.demoncode.portal.activity.ApConfigFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_apconfig" />

    </FrameLayout>
    
</LinearLayout>
